# reExp

./: .gitignore  AGENTS.md  agent.md  main.py  pyproject.toml  requirements.txt  train.py
.serena/: project.yml
refs/: swin_unetr_brats23_segmentation_3d.py
src/configs/: baseline.yaml  brats23_swin_unetr.yaml  brats23_swin_unetr_cached.yaml  lg_sca_30_100_10.yaml  lgmamba_lightfsde_bottleneck_no_eca_cached_ep100_ultrafast.yaml  lgmamba_lightfsde_bottleneck_no_eca_cached_ep300_policy.yaml  lgmamba_lightfsde_cached_ep100_ultrafast.yaml  lgmamba_lightfsde_cached_ep300_policy.yaml  lgmamba_lightfsde_post_eca_cached_ep100_ultrafast.yaml  lgmamba_lightfsde_pre_eca_cached_ep100_ultrafast.yaml  lgmamba_lightfsde_pre_eca_cached_ep300_policy.yaml  lgmamba_lightfsde_pre_post_eca_cached_ep300_policy.yaml  lgmamba_lightfsde_residual_inject_cached_ep100_ultrafast.yaml  lgmamba_lightfsde_residual_inject_cached_ep300_policy.yaml  lgmamba_lightfsde_shallow_eca_mamba_eca_mamba_cached_ep100_ultrafast.yaml  lgmamba_lightfsde_shallow_plain_post_eca_cached_ep100_ultrafast.yaml  lgmamba_lightfsde_shallow_skip12_no_eca_cached_ep100_ultrafast.yaml  lgmamba_lightfsde_shallow_skip12_no_eca_dwconv_eca_mamba_eca_mamba_cached_ep100_ultrafast.yaml  lgmamba_lightfsde_shallow_skip12_no_eca_dwconv_mamba_dwconv_mamba_cached_ep100_ultrafast.yaml  lgmamba_lightfsde_shallow_skip12_no_eca_dwconv_mamba_eca_mamba_eca_cached_ep100_ultrafast.yaml  lgmamba_ssd_r03_bs10_ep30.yaml  (+5 more)
tools/: prepare_brats_cache.py  profile_dataloader.py  run_full_val_from_run_name.py  run_tta_test_inference.py
wandb/: latest-run
(+85 files in other folders)
